[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "beer"
version = "0.0.1"
authors = [
  { name="Antoine Vaure", email="" },
]
description = "Easily manage wine prefixes"
readme = "README.md"
requires-python = ">=3.11"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]

[project.scripts]
beer = "beer:main"

# [project.urls]
# "Homepage" = "https://github.com/pypa/sampleproject"
# "Bug Tracker" = "https://github.com/pypa/sampleproject/issues"
